
	* Move X related window items into their own substruct of
	_Elm_Win_Smart_Data to allow grouping based on engine.

2012-05-29 Rob Bradford
	* Move X related cursor items into their own substruct of Elm_Cursor
	to make supporting cursors on other platforms cleaner.

2012-05-30 Rob Bradford
	* Add support for setting the cursor under Wayland:
	* Introduce a configure option and #define to as per other engines
	* Add always-built API function to allow identification of running
	under Wayland (like for X11)
	* Call into Ecore to set the cursor when the mouse enters the desired
	widget.

2012-05-30 Mike Blumenkrantz

        * Fix even/odd signals for genlist items

2012-05-30 Thiep Ha

       * Entry: Add 3 APIs which are elm_entry_text_style_user_push/pop/peek
       and test functions for these APIs.

2012-05-31 WooHyun Jung

       * child_can_focus should be EINA_FALSE only when all children in the object
         tree are not focusable. Before this fix, it was EINA_FALSE when all sub
         objects were not focusable. (i.e. didn't check whole object tree)

2012-06-01 Mike Blumenkrantz

        * Re-setting the current mirrored mode state no longer causes a full recalc

2012-06-07 Jaehwan Kim

        * Toolbar: Remove the APIs elm_toolbar_items_max_set/get.
	  Instead of them, add the APIs elm_toolbar_standard_priority_set/get.
	  The items which are lower than standard priority are located in more menu or panel.

2012-06-08 Jaehwan Kim

        * Add elm_object_scroll_hold/freeze_get. 

2012-06-12 ChunEon Park(Hermet)

        * Fixed Transit wipe effect flickering.

2012-06-12 Carsten Haitzler (The Rasterman)

	* Add elm_win_size_base_set/get, elm_win_size_step_set/get for hinting
        sizing of windows. Useful for terminals.

2012-06-12 Mike Blumenkrantz

        * Map no longer saves its files to directories outside of the user's home directory

2012-06-14 Seunggyun Kim

        * Fix elm_config_font_overlay_apply() to also apply rescaling properly.
